--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
   <!-- Initial Welcome View -->
   <div class="welcome-container" id="welcomeContainer">
     <h1 class="main-heading">ONE CODE ONE COMMITMENT</h1>
-    <h2 class="subheading">I blast furnace welcomes you to Ethics Month '25</h2>
+    <h2 class="subheading">welcomes you to Ethics Month '25</h2>
     <button class="continue-btn" id="continueBtn">Continue</button>
   </div>
 
