--- a/index.html
+++ b/index.html
@@ -630,9 +630,9 @@
     <div class="logo">ETHICS MONTH '25</div>
   </div>
 
-  <!-- Tata Steel Logos (hidden initially) -->
+  <!-- Tata Steel Logos (hidden initially) 
   <img src="tata-steel-logo.png" alt="Tata Steel Logo" class="corner-logo logo-left">
-  <img src="tata-steel-logo.png" alt="Tata Steel Logo" class="corner-logo logo-right">
+  <img src="tata-steel-logo.png" alt="Tata Steel Logo" class="corner-logo logo-right">-->
 
   <div class="top-particles" id="topParticles"></div>
   <div class="particles" id="particles"></div>
