--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
   </div>
 
   <div class="footer-dev">
-    <p>Designed & Developed by <span>Aanchal Kunal singh</span></p>
+    <p>Designed & Developed by <span>Aanchal upadhyaya</span></p>
   </div>
 
   <script>
